ideas-common-synopsis/src/main/java/es/us/isa/ideas/synopsis/common/hcs/parser/HCSParser.java
// Generated from C:\Users\ISA Group\Desktop\Parsers\Synopsis-parser\HCS.g4 by ANTLR 4.1
package es.us.isa.ideas.synopsis.common.hcs.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HCSParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SERVICE=1, SELECTABLE_TERMS=2, DERIVED_TERMS=3, DEPENDENCIES=4, HIGHLY_CONF=5, 
		SERVICES=6, GLOBAL_TERMS=7, TABLE=8, INTEGER=9, FLOAT=10, BOOLEAN=11, 
		SET=12, ENUM=13, TRUE=14, FALSE=15, SUM=16, MIN=17, MAX=18, CA=19, CC=20, 
		PA=21, PC=22, LLA=23, LLC=24, DP=25, PyC=26, COMA=27, AND=28, OR=29, NOT=30, 
		IMPLIES=31, REQUIRES=32, IFF=33, EXCLUDES=34, PLUS=35, HYPHEN=36, ASTERISK=37, 
		SLASH=38, LT=39, GT=40, EQ=41, NEQ=42, LTE=43, GTE=44, ASSIG=45, Identifier=46, 
		String=47, Integer=48, S_Integer=49, Float=50, S_Float=51, Boolean=52, 
		WS=53, COMMENT=54, LINE_COMMENT=55;
	public static final String[] tokenNames = {
		"<INVALID>", "'Service'", "'%SelectableTerms'", "'%DerivedTerms'", "'%Dependencies'", 
		"'Highly_configurable'", "'%Services'", "'%GlobalTerms'", "'table'", "'int'", 
		"'real'", "'boolean'", "'set'", "'enum'", "'true'", "'false'", "'sum'", 
		"'min'", "'max'", "'['", "']'", "'('", "')'", "'{'", "'}'", "':'", "';'", 
		"','", "'&&'", "'||'", "'!'", "'->'", "'REQUIRES'", "'IFF'", "'EXCLUDES'", 
		"'+'", "'-'", "'*'", "'/'", "'<'", "'>'", "'=='", "'!='", "'<='", "'>='", 
		"'='", "Identifier", "String", "Integer", "S_Integer", "Float", "S_Float", 
		"Boolean", "WS", "COMMENT", "LINE_COMMENT"
	};
	public static final int
		RULE_entry = 0, RULE_conf_service = 1, RULE_conf_service_definition = 2, 
		RULE_selectable_terms = 3, RULE_derived_terms = 4, RULE_highly_conf_service = 5, 
		RULE_highly_conf_service_def = 6, RULE_services = 7, RULE_service = 8, 
		RULE_global_terms = 9, RULE_dependencies = 10, RULE_dependency = 11, RULE_property = 12, 
		RULE_domain = 13, RULE_parameters = 14, RULE_table = 15, RULE_table_header = 16, 
		RULE_table_content = 17, RULE_table_expression = 18, RULE_cardinality = 19, 
		RULE_expression = 20, RULE_list = 21, RULE_array = 22, RULE_args = 23, 
		RULE_atom = 24;
	public static final String[] ruleNames = {
		"entry", "conf_service", "conf_service_definition", "selectable_terms", 
		"derived_terms", "highly_conf_service", "highly_conf_service_def", "services", 
		"service", "global_terms", "dependencies", "dependency", "property", "domain", 
		"parameters", "table", "table_header", "table_content", "table_expression", 
		"cardinality", "expression", "list", "array", "args", "atom"
	};

	@Override
	public String getGrammarFileName() { return "HCS.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public HCSParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class EntryContext extends ParserRuleContext {
		public List<Highly_conf_serviceContext> highly_conf_service() {
			return getRuleContexts(Highly_conf_serviceContext.class);
		}
		public List<Conf_serviceContext> conf_service() {
			return getRuleContexts(Conf_serviceContext.class);
		}
		public Conf_serviceContext conf_service(int i) {
			return getRuleContext(Conf_serviceContext.class,i);
		}
		public Highly_conf_serviceContext highly_conf_service(int i) {
			return getRuleContext(Highly_conf_serviceContext.class,i);
		}
		public EntryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entry; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HCSVisitor ) return ((HCSVisitor<? extends T>)visitor).visitEntry(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EntryContext entry() throws RecognitionException {
		EntryContext _localctx = new EntryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_entry);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SERVICE) {
				{
				{
				setState(50); conf_service();
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==HIGHLY_CONF) {
				{
				{
				setState(56); highly_conf_service();
				}
				}
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Conf_serviceContext extends ParserRuleContext {
		public Token service_id;
		public Conf_service_definitionContext conf_service_definition() {
			return getRuleContext(Conf_service_definitionContext.class,0);
		}
		public TerminalNode LLA() { return getToken(HCSParser.LLA, 0); }
		public TerminalNode Identifier() { return getToken(HCSParser.Identifier, 0); }
		public TerminalNode SERVICE() { return getToken(HCSParser.SERVICE, 0); }
		public TerminalNode LLC() { return getToken(HCSParser.LLC, 0); }
		public Conf_serviceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conf_service; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HCSVisitor ) return ((HCSVisitor<? extends T>)visitor).visitConf_service(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Conf_serviceContext conf_service() throws RecognitionException {
		Conf_serviceContext _localctx = new Conf_serviceContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_conf_service);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62); match(SERVICE);
			setState(63); ((Conf_serviceContext)_localctx).service_id = match(Identifier);
			setState(64); match(LLA);
			setState(65); conf_service_definition();
			setState(66); match(LLC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Conf_service_definitionContext extends ParserRuleContext {
		public DependenciesContext dependencies() {
			return getRuleContext(DependenciesContext.class,0);
		}
		public Selectable_termsContext selectable_terms() {
			return getRuleContext(Selectable_termsContext.class,0);
		}
		public Derived_termsContext derived_terms() {
			return getRuleContext(Derived_termsContext.class,0);
		}
		public Conf_service_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conf_service_definition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HCSVisitor ) return ((HCSVisitor<? extends T>)visitor).visitConf_service_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Conf_service_definitionContext conf_service_definition() throws RecognitionException {
		Conf_service_definitionContext _localctx = new Conf_service_definitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_conf_service_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68); selectable_terms();
			setState(69); derived_terms();
			setState(70); dependencies();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Selectable_termsContext extends ParserRuleContext {
		public TerminalNode SELECTABLE_TERMS() { return getToken(HCSParser.SELECTABLE_TERMS, 0); }
		public PropertyContext property(int i) {
			return getRuleContext(PropertyContext.class,i);
		}
		public List<PropertyContext> property() {
			return getRuleContexts(PropertyContext.class);
		}
		public Selectable_termsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectable_terms; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HCSVisitor ) return ((HCSVisitor<? extends T>)visitor).visitSelectable_terms(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Selectable_termsContext selectable_terms() throws RecognitionException {
		Selectable_termsContext _localctx = new Selectable_termsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_selectable_terms);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72); match(SELECTABLE_TERMS);
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Identifier) {
				{
				{
				setState(73); property();
				}
				}
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Derived_termsContext extends ParserRuleContext {
		public TerminalNode DERIVED_TERMS() { return getToken(HCSParser.DERIVED_TERMS, 0); }
		public PropertyContext property(int i) {
			return getRuleContext(PropertyContext.class,i);
		}
		public List<PropertyContext> property() {
			return getRuleContexts(PropertyContext.class);
		}
		public Derived_termsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_derived_terms; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HCSVisitor ) return ((HCSVisitor<? extends T>)visitor).visitDerived_terms(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Derived_termsContext derived_terms() throws RecognitionException {
		Derived_termsContext _localctx = new Derived_termsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_derived_terms);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79); match(DERIVED_TERMS);
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Identifier) {
				{
				{
				setState(80); property();
				}
				}
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Highly_conf_serviceContext extends ParserRuleContext {
		public Token service_id;
		public TerminalNode HIGHLY_CONF() { return getToken(HCSParser.HIGHLY_CONF, 0); }
		public Highly_conf_service_defContext highly_conf_service_def() {
			return getRuleContext(Highly_conf_service_defContext.class,0);
		}
		public TerminalNode LLA() { return getToken(HCSParser.LLA, 0); }
		public TerminalNode Identifier() { return getToken(HCSParser.Identifier, 0); }
		public TerminalNode SERVICE() { return getToken(HCSParser.SERVICE, 0); }
		public TerminalNode LLC() { return getToken(HCSParser.LLC, 0); }
		public Highly_conf_serviceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_highly_conf_service; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HCSVisitor ) return ((HCSVisitor<? extends T>)visitor).visitHighly_conf_service(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Highly_conf_serviceContext highly_conf_service() throws RecognitionException {
		Highly_conf_serviceContext _localctx = new Highly_conf_serviceContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_highly_conf_service);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86); match(HIGHLY_CONF);
			setState(87); match(SERVICE);
			setState(88); ((Highly_conf_serviceContext)_localctx).service_id = match(Identifier);
			setState(89); match(LLA);
			setState(90); highly_conf_service_def();
			setState(91); match(LLC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Highly_conf_service_defContext extends ParserRuleContext {
		public DependenciesContext dependencies() {
			return getRuleContext(DependenciesContext.class,0);
		}
		public Global_termsContext global_terms() {
			return getRuleContext(Global_termsContext.class,0);
		}
		public ServicesContext services() {
			return getRuleContext(ServicesContext.class,0);
		}
		public Highly_conf_service_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_highly_conf_service_def; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HCSVisitor ) return ((HCSVisitor<? extends T>)visitor).visitHighly_conf_service_def(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Highly_conf_service_defContext highly_conf_service_def() throws RecognitionException {
		Highly_conf_service_defContext _localctx = new Highly_conf_service_defContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_highly_conf_service_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93); services();
			setState(94); global_terms();
			setState(95); dependencies();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ServicesContext extends ParserRuleContext {
		public ServiceContext service(int i) {
			return getRuleContext(ServiceContext.class,i);
		}
		public List<ServiceContext> service() {
			return getRuleContexts(ServiceContext.class);
		}
		public TerminalNode SERVICES() { return getToken(HCSParser.SERVICES, 0); }
		public ServicesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_services; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HCSVisitor ) return ((HCSVisitor<? extends T>)visitor).visitServices(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ServicesContext services() throws RecognitionException {
		ServicesContext _localctx = new ServicesContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_services);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97); match(SERVICES);
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Identifier) {
				{
				{
				setState(98); service();
				}
				}
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ServiceContext extends ParserRuleContext {
		public Token service_id;
		public Token service_type;
		public TerminalNode PyC() { return getToken(HCSParser.PyC, 0); }
		public TerminalNode Identifier(int i) {
			return getToken(HCSParser.Identifier, i);
		}
		public List<TerminalNode> Identifier() { return getTokens(HCSParser.Identifier); }
		public CardinalityContext cardinality() {
			return getRuleContext(CardinalityContext.class,0);
		}
		public TerminalNode DP() { return getToken(HCSParser.DP, 0); }
		public ServiceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_service; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HCSVisitor ) return ((HCSVisitor<? extends T>)visitor).visitService(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ServiceContext service() throws RecognitionException {
		ServiceContext _localctx = new ServiceContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_service);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104); ((ServiceContext)_localctx).service_id = match(Identifier);
			setState(105); match(DP);
			setState(106); ((ServiceContext)_localctx).service_type = match(Identifier);
			setState(107); cardinality();
			setState(108); match(PyC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Global_termsContext extends ParserRuleContext {
		public PropertyContext property(int i) {
			return getRuleContext(PropertyContext.class,i);
		}
		public TerminalNode GLOBAL_TERMS() { return getToken(HCSParser.GLOBAL_TERMS, 0); }
		public List<PropertyContext> property() {
			return getRuleContexts(PropertyContext.class);
		}
		public Global_termsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_global_terms; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HCSVisitor ) return ((HCSVisitor<? extends T>)visitor).visitGlobal_terms(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Global_termsContext global_terms() throws RecognitionException {
		Global_termsContext _localctx = new Global_termsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_global_terms);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110); match(GLOBAL_TERMS);
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Identifier) {
				{
				{
				setState(111); property();
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DependenciesContext extends ParserRuleContext {
		public List<TableContext> table() {
			return getRuleContexts(TableContext.class);
		}
		public List<DependencyContext> dependency() {
			return getRuleContexts(DependencyContext.class);
		}
		public TerminalNode DEPENDENCIES() { return getToken(HCSParser.DEPENDENCIES, 0); }
		public TableContext table(int i) {
			return getRuleContext(TableContext.class,i);
		}
		public DependencyContext dependency(int i) {
			return getRuleContext(DependencyContext.class,i);
		}
		public DependenciesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dependencies; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HCSVisitor ) return ((HCSVisitor<? extends T>)visitor).visitDependencies(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DependenciesContext dependencies() throws RecognitionException {
		DependenciesContext _localctx = new DependenciesContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_dependencies);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117); match(DEPENDENCIES);
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TRUE) | (1L << FALSE) | (1L << SUM) | (1L << MIN) | (1L << MAX) | (1L << CA) | (1L << PA) | (1L << LLA) | (1L << NOT) | (1L << Identifier) | (1L << String) | (1L << Integer) | (1L << S_Integer) | (1L << Float) | (1L << S_Float))) != 0)) {
				{
				{
				setState(118); dependency();
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TABLE) {
				{
				{
				setState(124); table();
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DependencyContext extends ParserRuleContext {
		public TerminalNode PyC() { return getToken(HCSParser.PyC, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public DependencyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dependency; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HCSVisitor ) return ((HCSVisitor<? extends T>)visitor).visitDependency(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DependencyContext dependency() throws RecognitionException {
		DependencyContext _localctx = new DependencyContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_dependency);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130); expression(0);
			setState(131); match(PyC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropertyContext extends ParserRuleContext {
		public Token id;
		public DomainContext dom;
		public DomainContext domain() {
			return getRuleContext(DomainContext.class,0);
		}
		public TerminalNode PyC() { return getToken(HCSParser.PyC, 0); }
		public TerminalNode Identifier() { return getToken(HCSParser.Identifier, 0); }
		public TerminalNode DP() { return getToken(HCSParser.DP, 0); }
		public PropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_property; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HCSVisitor ) return ((HCSVisitor<? extends T>)visitor).visitProperty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PropertyContext property() throws RecognitionException {
		PropertyContext _localctx = new PropertyContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_property);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133); ((PropertyContext)_localctx).id = match(Identifier);
			setState(134); match(DP);
			setState(135); ((PropertyContext)_localctx).dom = domain();
			setState(136); match(PyC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DomainContext extends ParserRuleContext {
		public Token datatype;
		public Token min;
		public Token max;
		public ParametersContext params;
		public TerminalNode SET() { return getToken(HCSParser.SET, 0); }
		public List<TerminalNode> Integer() { return getTokens(HCSParser.Integer); }
		public TerminalNode ENUM() { return getToken(HCSParser.ENUM, 0); }
		public List<TerminalNode> S_Float() { return getTokens(HCSParser.S_Float); }
		public TerminalNode CC() { return getToken(HCSParser.CC, 0); }
		public TerminalNode FLOAT() { return getToken(HCSParser.FLOAT, 0); }
		public TerminalNode S_Float(int i) {
			return getToken(HCSParser.S_Float, i);
		}
		public TerminalNode CA() { return getToken(HCSParser.CA, 0); }
		public TerminalNode LLA() { return getToken(HCSParser.LLA, 0); }
		public List<TerminalNode> S_Integer() { return getTokens(HCSParser.S_Integer); }
		public TerminalNode S_Integer(int i) {
			return getToken(HCSParser.S_Integer, i);
		}
		public List<ParametersContext> parameters() {
			return getRuleContexts(ParametersContext.class);
		}
		public TerminalNode Float(int i) {
			return getToken(HCSParser.Float, i);
		}
		public TerminalNode COMA(int i) {
			return getToken(HCSParser.COMA, i);
		}
		public TerminalNode BOOLEAN() { return getToken(HCSParser.BOOLEAN, 0); }
		public TerminalNode Integer(int i) {
			return getToken(HCSParser.Integer, i);
		}
		public List<TerminalNode> Float() { return getTokens(HCSParser.Float); }
		public ParametersContext parameters(int i) {
			return getRuleContext(ParametersContext.class,i);
		}
		public List<TerminalNode> COMA() { return getTokens(HCSParser.COMA); }
		public TerminalNode LLC() { return getToken(HCSParser.LLC, 0); }
		public TerminalNode INTEGER() { return getToken(HCSParser.INTEGER, 0); }
		public DomainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_domain; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HCSVisitor ) return ((HCSVisitor<? extends T>)visitor).visitDomain(this);
			else return visitor.visitChildren(this);
		}
	}
